# mc_protocol

./: Cargo.toml  README.md
src/: main.rs  server.rs  var_int.rs
src/packets/: handshake.rs  login_start.rs  login_success.rs  mod.rs  request_encryption.rs  response_encryption.rs
