[package]
name = "mc_protocol"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# serde_bytes = "0.11"
# serde = { version = "1", features = ["derive"] }
anyhow = "1.0.65"
num-traits = "0.2"
num-derive = "0.3"
rand = "0.8.5"
rsa-der = "0.3.0"
rsa = "0.6.1"
sha1 = "0.6"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "net", "macros"] }
async-trait = "0.1.57"
mojang-api = "0.6.1"
num-bigint = "0.4.3"
async-mutex = "1.4.0"
cfb8 = "0.8.1"
aes = "0.8.1"